| Bug #33802 | ndb_drop table does not release data memory! | ||
|---|---|---|---|
| Submitted: | 10 Jan 2008 17:09 | Modified: | 25 Apr 2008 10:23 |
| Reporter: | Johan Andersson | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | mysql 5.1.23 - ndb 6.3.7 | OS: | Any |
| Assigned to: | Jonas Oreland | Target Version: | 6.0-rc |
| Triage: | D2 (Serious) / R2 (Low) / E2 (Low) | ||
[10 Jan 2008 17:09]
Johan Andersson
[11 Jan 2008 11:59]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/40901 ChangeSet@1.2836, 2008-01-11 12:00:11+01:00, jonas@perch.ndb.mysql.com +3 -0 ndb - bug#33802 full var-pages was not released at drop-table, as they were not on any free-list (introduced by page-release push)
[23 Jan 2008 11:00]
Jonas Oreland
pushed to telco-63 & telco-64
[1 Feb 2008 15:11]
Jon Stephens
Documented fix in 5.1.23-ndb-6.3.8 changelog as follows:
DROP TABLE did not free all data memory. This
bug was observed in MySQL 5.1.23-ndb-6.3.7 only.
Left bug in PQ status pending further merges.
[25 Apr 2008 10:23]
Jonas Oreland
no further merging closing
